<resources>

    <!-- Application and Activity Title -->

    <string name="app_name">GIFT Network</string>
    <string name="title_activity_signin_gift">Sign In</string>
    <string name="title_activity_signup_gift">Sign Up</string>
    <string name="title_activity_about_gift">About</string>

    <!-- MainActivty Strings -->
    <string name="title_facebook"><font size="20">Facebook</font></string>
    <string name="title_linkedin">Linkedin</string>
    <string name="title_twitter">Twitter</string>
    <string name="title_googleplus">GooglePlus</string>
    <string name="title_activity_login_gift">LoginGIFT</string>
    <string name="singout_success_message">Successfully Singed Out</string>

    <!-- Login Screen and Signup Screen -->
    <string name="username_label">User Name</string>
    <string name="password_label">Password</string>
    <string name="signup_confirm_password_label">Confirm Password</string>
    <string name="signin_button_label">Sign In</string>
    <string name="signup_button_label">Sign Up</string>
    <string name="username_hint">Enter username</string>
    <string name="password_hint">Enter password</string>
    <string name="confirm_password_hint">Enter confirm password</string>
    <string name="signup_result_msg">SignUp success</string>

    <!-- about -->
    <string name="about_text">"<font size="25"><font fgcolor="#ff000000"><b>About</b></font></font>\n\n<font size="18"><font fgcolor="#ff1c6ba1">GIFT Network</font></font>"</string>
    <string name="about_version">Version %s</string>

    <!-- Menu strings -->
    <string name="menu_about">About</string>
    <string name="menu_signout">Sign Out</string>
    <string name="menu_refresh">Refresh</string>

    <!-- Dialog strings -->
    <string name="dialog_title_signup_fail">Sign Up Failed</string>
    <string name="dialog_title_signin_fail">Sign In Failed</string>
    <string name="button_ok">OK</string>
    <string name="dialog_fields_invalid_login_message">Please enter valid UserName and PassWord</string>
    <string name="dialog_fields_password_mismatch_message">Password and Confirm Password should match</string>
    <string name="dialog_no_network_message">Please Enable Internet Connection to use this Application.</string>

</resources>