<?xml version="1.0" encoding="UTF-8"?>
<!-- Common layout used in SingIn and Sign Up Screen for UserName and Password fields -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/message"
        style="@style/label_text"
        android:text="@string/username_label" />

    <EditText
        android:id="@+id/username_edit"
        style="@style/edit_text"
        android:hint="@string/username_hint"
        android:inputType="text" />

    <TextView
        android:id="@+id/password_label"
        style="@style/label_text"
        android:text="@string/password_label" />

    <EditText
        android:id="@+id/password_edit"
        style="@style/edit_text"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

</LinearLayout>